--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-h1{
-    align-content: center
+body {
+    background-color: rgb(110, 187, 183);
+    text-align: center;
+    font-family: Courier, monospace;
+    
 }
+button{
+    color:#b15500 ;
+}
+  
